20241011 2150 "회원 업데이트 및 삭제 기능, 비밀번호 확인로직 구현중, 스크립트 나누기 연습"

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -614,6 +614,12 @@
     <script type="text/javascript" th:src="@{js/scripts.min.js}"></script>
     <script type="text/javascript" th:src="@{js/scripts.js}"></script>
     <script type="text/javascript" th:src="@{js/order.js}" ></script>
+<script type="module">
+    import MovieApi from "/js/movie/movie.api.js";
+    import movieAPI from "../static/js/movie/movie.api";
+
+    movieAPI.getMovieList()
+</script>
 
 </body>
 </html>
