--- a/src/main/resources/templates/profile/main.html
+++ b/src/main/resources/templates/profile/main.html
@@ -1330,7 +1330,7 @@
                             <span class="ph ph-tag text-xl"></span>
                             <strong class="heading6">My Address</strong>
                         </a>
-                        <a th:href="@{profile/setting}" class="category-item flex items-center gap-3 w-full px-5 py-4 rounded-lg cursor-pointer duration-300 hover:bg-white mt-1.5" th:data-item="${setting}">
+                        <a th:href="@{/api/user/profile/setting/1}" class="category-item flex items-center gap-3 w-full px-5 py-4 rounded-lg cursor-pointer duration-300 hover:bg-white mt-1.5" th:data-item="${setting}">
                             <span class="ph ph-gear-six text-xl"></span>
                             <strong class="heading6">Setting</strong>
                         </a>
@@ -1403,13 +1403,6 @@
                     </div>
                 </div>
                 <script>
-                    let historys = [
-                        {id:'191764', theater:'1관', title:'베로니카의 이중생활', date:'2017-10-12', time:'16:30:00', seat:'O열 1번', people:'1'},
-                        {id:'191764', theater:'1관', title:'베로니카의 이중생활', date:'2017-10-12', time:'16:30:00', seat:'O열 1번', people:'1'},
-                        {id:'191764', theater:'1관', title:'베로니카의 이중생활', date:'2017-10-12', time:'16:30:00', seat:'O열 1번', people:'1'},
-                        {id:'191764', theater:'1관', title:'베로니카의 이중생활', date:'2017-10-12', time:'16:30:00', seat:'O열 1번', people:'1'},
-                        {id:'191764', theater:'1관', title:'베로니카의 이중생활', date:'2017-10-12', time:'16:30:00', seat:'O열 1번', people:'1'}
-                    ]
                     let history = JSON.stringify(historys).map(function(element){
                         alert(history);
                         document.getElementById('Hid').innerText = element.id;
