--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
                         <div class="header_ticket">
                             <a href="#order" class="order_btn">Order</a>
                             <span>3</span>
-                        </div>
+                        </div>21</div>
 
                         <a href="javascript:;" id="header-search"></a>
                         <div class="button_container" id="toggle">
