--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -31,7 +31,7 @@
                             <a th:href="@{/api/user/login}">Login</a>
                         </div>
                         <div class="header_author">
-                            <a th:href="@{/api/user/mypage}">Mypage</a>
+                            <a th:href="@{/api/user/mypage/1}">Mypage</a>
                         </div>
                         <div class="header_ticket">
                             <a th:href="@{/single}">Movie</a>
