--- a/src/main/resources/templates/profile/setting.html
+++ b/src/main/resources/templates/profile/setting.html
@@ -34,22 +34,21 @@
                 <div class="user-infor bg-surface md:px-8 px-5 md:py-10 py-6 md:rounded-[20px] rounded-xl">
                     <div class="heading flex flex-col items-center justify-center">
                         <div class="avatar">
-                            <img th:src="@{/profile/images/robot.jpg}" alt="avatar"
+                            <img th:src="${user.getProfileImageUrl()}" alt="avatar"
                                  class="md:w-[140px] w-[120px] md:h-[140px] h-[120px] rounded-full"/>
                         </div>
-                        <div class="name heading6 mt-4 text-center">Tony Nguyen</div>
-                        <div class="mail heading6 font-normal normal-case text-secondary text-center mt-1">
-                            hi.avitex@gmail.com
+                        <div class="name heading6 mt-4 text-center"
+                             th:text="${user.getNickname()} + '님의 프로필'">
                         </div>
                     </div>
                     <div class="menu-tab list-category w-full max-w-none lg:mt-10 mt-6">
-                        <a th:href="@{#}"
+                        <a th:href="@{/api/user/mypage/1}"
                            class="category-item flex items-center gap-3 w-full px-5 py-4 rounded-lg cursor-pointer duration-300 hover:bg-white active"
                            th:data-item="${dashboard}">
                             <span class="ph ph-house-line text-xl"></span>
                             <strong class="heading6">History Orders</strong>
                         </a>
-                        <a th:href="@{/api/}"
+                        <a th:href="@{/api/reservation/list/1}"
                            class="category-item flex items-center gap-3 w-full px-5 py-4 rounded-lg cursor-pointer duration-300 hover:bg-white mt-1.5"
                            th:data-item="${orders}">
                             <span class="ph ph-package text-xl"></span>
@@ -67,7 +66,7 @@
                             <span class="ph ph-gear-six text-xl"></span>
                             <strong class="heading6">Setting</strong>
                         </a>
-                        <a href="login.html"
+                        <a th:href="@{/api/wish/list/1}"
                            class="category-item flex items-center gap-3 w-full px-5 py-4 rounded-lg cursor-pointer duration-300 hover:bg-white mt-1.5">
                             <span class="ph ph-sign-out text-xl"></span>
                             <strong class="heading6">WishList</strong>
@@ -161,149 +160,6 @@
                         </div>
                     </div>
                 </form>
-            </div>
-            <div id="footer" class="footer">
-                <div class="footer-main bg-surface">
-                    <div class="container">
-                        <div class="content-footer md:py-[60px] py-10 flex justify-between flex-wrap gap-y-8">
-                            <div class="company-infor basis-1/4 max-lg:basis-full pr-7">
-                                <a href="index.html" class="logo inline-block">
-                                    <div class="heading3 w-fit">Anvogue</div>
-                                </a>
-                                <div class="flex gap-3 mt-3">
-                                    <div class="flex flex-col">
-                                        <span class="text-button">Mail:</span>
-                                        <span class="text-button mt-3">Phone:</span>
-                                        <span class="text-button mt-3">Address:</span>
-                                    </div>
-                                    <div class="flex flex-col">
-                                        <span class="">hi.avitex@gmail.com</span>
-                                        <span class="mt-[14px]">1-333-345-6868</span>
-                                        <span class="mt-3 pt-1">549 Oak St.Crystal Lake, IL 60014</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="right-content flex flex-wrap gap-y-8 basis-3/4 max-lg:basis-full">
-                                <div class="list-nav flex justify-between basis-2/3 max-md:basis-full gap-4">
-                                    <div class="item flex flex-col basis-1/3">
-                                        <div class="text-button-uppercase pb-3">Infomation</div>
-                                        <a class="caption1 has-line-before duration-300 w-fit" href="contact.html">Contact
-                                            us </a>
-                                        <a class="caption1 has-line-before duration-300 w-fit pt-2" href="#!">
-                                            Career </a>
-                                        <a class="caption1 has-line-before duration-300 w-fit pt-2"
-                                           href="my-account.html"> My Account</a>
-                                        <a class="caption1 has-line-before duration-300 w-fit pt-2"
-                                           href="order-tracking.html"> Order & Returns</a>
-                                        <a class="caption1 has-line-before duration-300 w-fit pt-2" href="faqs.html">FAQs </a>
-                                    </div>
-                                    <div class="item flex flex-col basis-1/3">
-                                        <div class="text-button-uppercase pb-3">Quick Shop</div>
-                                        <a class="caption1 has-line-before duration-300 w-fit"
-                                           href="shop-breadcrumb1.html">Women</a>
-                                        <a class="caption1 has-line-before duration-300 w-fit pt-2"
-                                           href="shop-breadcrumb1.html">Men </a>
-                                        <a class="caption1 has-line-before duration-300 w-fit pt-2"
-                                           href="shop-breadcrumb1.html">Clothes </a>
-                                        <a class="caption1 has-line-before duration-300 w-fit pt-2"
-                                           href="shop-breadcrumb1.html"> Accessories </a>
-                                        <a class="caption1 has-line-before duration-300 w-fit pt-2"
-                                           href="blog-default.html">Blog </a>
-                                    </div>
-                                    <div class="item flex flex-col basis-1/3">
-                                        <div class="text-button-uppercase pb-3">Customer Services</div>
-                                        <a class="caption1 has-line-before duration-300 w-fit"
-                                           href="faqs.html">FAQs </a>
-                                        <a class="caption1 has-line-before duration-300 w-fit pt-2" href="faqs.html">Shipping </a>
-                                        <a class="caption1 has-line-before duration-300 w-fit pt-2" href="faqs.html">Privacy
-                                            Policy</a>
-                                        <a class="caption1 has-line-before duration-300 w-fit pt-2"
-                                           href="order-tracking.html">Return & Refund</a>
-                                    </div>
-                                </div>
-                                <div class="newsletter basis-1/3 pl-7 max-md:basis-full max-md:pl-0">
-                                    <div class="text-button-uppercase">Newletter</div>
-                                    <div class="caption1 mt-3">Sign up for our newsletter and get 10% off your first
-                                        purchase
-                                    </div>
-                                    <div class="input-block w-full h-[52px] mt-4">
-                                        <form class="w-full h-full relative" action="post">
-                                            <input type="email" placeholder="Enter your e-mail"
-                                                   class="caption1 w-full h-full pl-4 pr-14 rounded-xl border border-line"
-                                                   required/>
-                                            <button class="w-[44px] h-[44px] bg-black flex items-center justify-center rounded-xl absolute top-1 right-1">
-                                                <i class="ph ph-arrow-right text-xl text-white"></i>
-                                            </button>
-                                        </form>
-                                    </div>
-                                    <div class="list-social flex items-center gap-6 mt-4">
-                                        <a href="https://www.facebook.com/" target="_blank">
-                                            <div class="icon-facebook text-2xl text-black"></div>
-                                        </a>
-                                        <a href="https://www.instagram.com/" target="_blank">
-                                            <div class="icon-instagram text-2xl text-black"></div>
-                                        </a>
-                                        <a href="https://www.twitter.com/" target="_blank">
-                                            <div class="icon-twitter text-2xl text-black"></div>
-                                        </a>
-                                        <a href="https://www.youtube.com/" target="_blank">
-                                            <div class="icon-youtube text-2xl text-black"></div>
-                                        </a>
-                                        <a href="https://www.pinterest.com/" target="_blank">
-                                            <div class="icon-pinterest text-2xl text-black"></div>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="footer-bottom py-3 flex items-center justify-between gap-5 max-lg:justify-center max-lg:flex-col border-t border-line">
-                            <div class="left flex items-center gap-8">
-                                <div class="copyright caption1 text-secondary">©2024 Anvogue. All Rights Reserved.</div>
-                                <div class="select-block flex items-center gap-5 max-md:hidden">
-                                    <div class="choose-language flex items-center gap-1.5">
-                                        <select name="language" id="chooseLanguageFooter"
-                                                class="caption2 bg-transparent">
-                                            <option value="English">English</option>
-                                            <option value="Espana">Espana</option>
-                                            <option value="France">France</option>
-                                        </select>
-                                        <i class="ph ph-caret-down text-xs text-[#1F1F1F]"></i>
-                                    </div>
-                                    <div class="choose-currency flex items-center gap-1.5">
-                                        <select name="currency" id="chooseCurrencyFooter"
-                                                class="caption2 bg-transparent">
-                                            <option value="USD">USD</option>
-                                            <option value="EUR">EUR</option>
-                                            <option value="GBP">GBP</option>
-                                        </select>
-                                        <i class="ph ph-caret-down text-xs text-[#1F1F1F]"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="right flex items-center gap-2">
-                                <div class="caption1 text-secondary">Payment:</div>
-                                <div class="payment-img">
-                                    <img th:src="@{/profile/images/robot.jpg}" alt="payment" class="w-9"/>
-                                </div>
-                                <div class="payment-img">
-                                    <img th:src="@{/profile/images/robot.jpg}" alt="payment" class="w-9"/>
-                                </div>
-                                <div class="payment-img">
-                                    <img th:src="@{/profile/images/robot.jpg}" alt="payment" class="w-9"/>
-                                </div>
-                                <div class="payment-img">
-                                    <img th:src="@{/profile/images/robot.jpg}" alt="payment" class="w-9"/>
-                                </div>
-                                <div class="payment-img">
-                                    <img th:src="@{/profile/images/robot.jpg}" alt="payment" class="w-9"/>
-                                </div>
-                                <div class="payment-img">
-                                    <img th:src="@{/profile/images/robot.jpg}" alt="payment" class="w-9"/>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
