--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
                         <a th:href="@{/api/user/login}">Login</a>
                     </div>
                     <div class="header_ticket">
-                        <a th:href="@{/api/user/mypage}">Mypage</a>
+                        <a th:href="@{/api/user/mypage/1}">Mypage</a>
                     </div>
                     <div class="header_ticket">
                         <a href="#order" class="order_btn">Order</a>
