--- a/src/main/resources/templates/profile/reservation.html
+++ b/src/main/resources/templates/profile/reservation.html
@@ -16,11 +16,11 @@
         <div class="container lg:pt-[134px] pt-24 pb-10 relative">
             <div class="main-content w-full h-full flex flex-col items-center justify-center relative z-[1]">
                 <div class="text-content">
-                    <div class="heading2 text-center">My Account</div>
+                    <div class="heading2 text-center">My Profile</div>
                     <div class="link flex items-center justify-center gap-1 caption1 mt-3">
-                        <a href="index.html">Homepage</a>
+                        <a th:href="@{/}">Homepage</a>
                         <i class="ph ph-caret-right text-sm text-secondary2"></i>
-                        <div class="text-secondary2 capitalize">My Account</div>
+                        <!--<div class="text-secondary2 capitalize">My Account</div>-->
                     </div>
                 </div>
             </div>
