--- a/src/main/resources/templates/profile/wishlist.html
+++ b/src/main/resources/templates/profile/wishlist.html
@@ -2,14 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:hover="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>리뷰 리스트 보기</title>
+    <title>위시리스트</title>
     <link rel="shortcut icon" th:href="@{/profile/images/fav.png}" type="image/x-icon"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
     <link rel="stylesheet" th:href="@{/profile/css/swiper-bundle.min.css}"/>
     <link rel="stylesheet" th:href="@{/profile/css/style.css}"/>
     <link rel="stylesheet" th:href="@{/profile/css/output-scss.css}"/>
     <link rel="stylesheet" th:href="@{/profile/css/output-tailwind.css}"/>
     <link rel="stylesheet" th:href="@{/profile/css/review.css}"/>
-    <link rel="shortcut icon" type="image/x-icon" th:href="@{/images/movieLogo.jpg}"/>
     <style>
         .wishlist-icon .wishlist-heart i {
             font-size: 24px;
@@ -61,11 +61,11 @@
         <div class="container lg:pt-[134px] pt-24 pb-10 relative">
             <div class="main-content w-full h-full flex flex-col items-center justify-center relative z-[1]">
                 <div class="text-content">
-                    <div class="heading2 text-center">My Account</div>
+                    <div class="heading2 text-center">My Profile</div>
                     <div class="link flex items-center justify-center gap-1 caption1 mt-3">
                         <a th:href="@{/}">Homepage</a>
                         <i class="ph ph-caret-right text-sm text-secondary2"></i>
-                        <div class="text-secondary2 capitalize">My Account</div>
+                        <!--<div class="text-secondary2 capitalize">My Account</div>-->
                     </div>
                 </div>
             </div>
