20241022 0328 "오더 기능 + 결제 연결"

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -580,6 +580,9 @@
     </article>
     <!-- Include jQuery and Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script> <!-- Iamport SDK -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/packages.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/scripts.min.js}"></script>
